; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_opncls.c_get_debug_link_info.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_opncls.c_get_debug_link_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GNU_DEBUGLINK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64*, i64*)* @get_debug_link_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_debug_link_info(i64* %0, i64* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store i64* %0, i64** %4, align 8
  store i64* %1, i64** %5, align 8
  %11 = load i64*, i64** %4, align 8
  %12 = call i32 @BFD_ASSERT(i64* %11)
  %13 = load i64*, i64** %5, align 8
  %14 = call i32 @BFD_ASSERT(i64* %13)
  %15 = load i64*, i64** %4, align 8
  %16 = load i32, i32* @GNU_DEBUGLINK, align 4
  %17 = call i32* @bfd_get_section_by_name(i64* %15, i32 %16)
  store i32* %17, i32** %6, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %51

21:                                               ; preds = %2
  %22 = load i64*, i64** %4, align 8
  %23 = load i32*, i32** %6, align 8
  %24 = call i32 @bfd_malloc_and_get_section(i64* %22, i32* %23, i32** %8)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %33, label %26

26:                                               ; preds = %21
  %27 = load i32*, i32** %8, align 8
  %28 = icmp ne i32* %27, null
  br i1 %28, label %29, label %32

29:                                               ; preds = %26
  %30 = load i32*, i32** %8, align 8
  %31 = call i32 @free(i32* %30)
  br label %32

32:                                               ; preds = %29, %26
  store i8* null, i8** %3, align 8
  br label %51

33:                                               ; preds = %21
  %34 = load i32*, i32** %8, align 8
  %35 = bitcast i32* %34 to i8*
  store i8* %35, i8** %10, align 8
  %36 = load i8*, i8** %10, align 8
  %37 = call i32 @strlen(i8* %36)
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %9, align 4
  %39 = load i32, i32* %9, align 4
  %40 = add nsw i32 %39, 3
  %41 = and i32 %40, -4
  store i32 %41, i32* %9, align 4
  %42 = load i64*, i64** %4, align 8
  %43 = load i32*, i32** %8, align 8
  %44 = load i32, i32* %9, align 4
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i32, i32* %43, i64 %45
  %47 = call i64 @bfd_get_32(i64* %42, i32* %46)
  store i64 %47, i64* %7, align 8
  %48 = load i64, i64* %7, align 8
  %49 = load i64*, i64** %5, align 8
  store i64 %48, i64* %49, align 8
  %50 = load i8*, i8** %10, align 8
  store i8* %50, i8** %3, align 8
  br label %51

51:                                               ; preds = %33, %32, %20
  %52 = load i8*, i8** %3, align 8
  ret i8* %52
}

declare dso_local i32 @BFD_ASSERT(i64*) #1

declare dso_local i32* @bfd_get_section_by_name(i64*, i32) #1

declare dso_local i32 @bfd_malloc_and_get_section(i64*, i32*, i32**) #1

declare dso_local i32 @free(i32*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i64 @bfd_get_32(i64*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
